--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-DATABASE_URL=postgresql://pmuser:password@localhost:5432/pmdb
+FRONTEND_URL=https://project-management-tool-2-v88n.onrender.com
 JWT_SECRET=mysecret109
+DATABASE_URL=postgresql://pmuser:password@localhost:5432/pmdb
