--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-FRONTEND_URL=https://project-management-tool-2-v88n.onrender.com
+FRONTEND_URL=https://project-management-tool-eta-sable.vercel.app
 JWT_SECRET=mysecret109
 DATABASE_URL=postgresql://pmuser:password@localhost:5432/pmdb
