--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 FRONTEND_URL=https://project-management-tool-2-v88n.onrender.com
 JWT_SECRET=mysecret109
-DATABASE_URL=postgresql://pmuser:password@localhost:5432/pmdb
+DATABASE_URL=postgresql://pmdb_eyny_user:V55h9yftONwBbfdHiArvUPeMILqV7x53@dpg-d3v6jh75r7bs7380kgp0-a/pmdb_eyny
